refactor: ajustes en los filtros y configuracion principal de JWT